# ornekcmakedeneme

./: CMakeLists.txt
main_dosyam/: add.cpp  add.h
my_add/: main.cpp
